--- a/resources/contents/en-US/challenges/5_remote_control.html
+++ b/resources/contents/en-US/challenges/5_remote_control.html
@@ -85,12 +85,12 @@
         version.</p>
 
     <p>Git has a branching system so that you can work on different parts of a project at different times. We'll learn
-        more about that later, but by default the first branch is named 'master'. When you push (and later pull) from a
+        more about that later, but by default the first branch is named 'main'. When you push (and later pull) from a
         project, you tell Git the <strong>branch name</strong> you want and the name of the <strong>remote</strong> that
         it lives on.</p>
 
-    <p>In this case, we'll send our branch named 'master' to our remote on GitHub named 'origin'. </p>
-    <code class="shell">git push origin master</code>
+    <p>In this case, we'll send our branch named 'main' to our remote on GitHub named 'origin'. </p>
+    <code class="shell">git push origin main</code>
 
     <p>Now go to your remote repository's page on GitHub.com and refresh the page. <strong>Wow!</strong> Everything is
         now the same locally as it is remotely. Congrats on your first public repository!</p>
