--- a/resources/contents/en-US/challenges/5_remote_control.html
+++ b/resources/contents/en-US/challenges/5_remote_control.html
@@ -85,7 +85,7 @@
         version.</p>
 
     <p>Git has a branching system so that you can work on different parts of a project at different times. We'll learn
-        more about that later, but by default the first branch is named 'main'. When you push (and later pull) from a
+        more about that later, but by default the first branch is named 'main' <a href="https://github.com/github/renaming" target="_blank">(as of October 2020)</a>. When you push (and later pull) from a
         project, you tell Git the <strong>branch name</strong> you want and the name of the <strong>remote</strong> that
         it lives on.</p>
 
